NXP-17282 increased permgen to 128m