@@ -4115,7 +4115,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Xmx1g -Dfile.encoding=UTF-8 ${it.failsafe.argLine}</argLine>
+          <argLine>-Xmx1g -XX:MaxPermSize=127m -Dfile.encoding=UTF-8 ${it.failsafe.argLine}</argLine>
           <skipTests>${skip.surefire.tests}</skipTests>
           <systemPropertyVariables>
             <net.sourceforge.cobertura.datafile>
